# btw-live

./: .gitignore  .mcp.json  CHANGELOG.md  README.md  install.ps1  pyproject.toml
.claude-plugin/: plugin.json
docs/: FEATURE_BACKLOG.md  SAFE_DOCS.md
mcp/: launch.cmd  server.py
re/: CAPTURE_GUIDE.md  PROTOCOL.md
scripts/: analyze_har.py  extract_cookies.py  extract_cookies_cdp.py  har_extract_session.py  import_cookie_header.py  parse_wm_multipart.py  probe_session.py  start_chrome_cdp.ps1
sessions/: architect.toml  debugger.toml  default.toml
skills/btw/: SKILL.md
skills/btw-cookies/: SKILL.md
skills/btw-doctor/: SKILL.md
skills/btw-mute/: SKILL.md
skills/btw-proxy/: SKILL.md
skills/btw-session-bind/: SKILL.md
skills/btw-session-delete/: SKILL.md
skills/btw-session-fresh/: SKILL.md
skills/btw-session-new/: SKILL.md
skills/btw-session-sync/: SKILL.md
skills/btw-session-use/: SKILL.md
skills/btw-sessions/: SKILL.md
skills/btw-status/: SKILL.md
skills/btw-stop/: SKILL.md
skills/btw-topup/: SKILL.md
skills/btw-unmute/: SKILL.md
skills/btw-vc/: SKILL.md
skills/btw-viz/: SKILL.md
skills/btw-voice/: SKILL.md
src/btw/: __init__.py  audio_io.py  control.py  conversation.py  cookie_parse.py  cookies.py  http_client.py  live_session.py  paths.py  profiles.py  proxy.py  runtime.py  service.py  (+6 more)
tests/: test_audio_levels.py  test_context_pack.py  test_control_ipc.py  test_conversation.py  test_cookie_parse.py  test_dc_boot.py  test_http_auth_unit.py  test_meters.py  test_profiles.py  test_proxy.py  test_sessions.py  test_voices.py
(+4 files in other folders)
